# Sibsutis-Ptc

./: .gitignore  CMakeLists.txt
HwNThreads/: main.c
HwThreads/: main.c
IntegrateMidpoint/: main.c
IntegrateMidpointThreads/: main.c
